<resources>
    <string name="app_name">project</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="log_in">Log In</string>
    <string name="sing_in">Sing In</string>
    <string name="crear_puesto_de_venta">Crear puesto de venta</string>
    <string name="adicionar_unidad_de_venta">Adicionar unidad de venta</string>
    <string name="name">Name</string>
    <string name="cell_phone">cell phone</string>
    <string name="email">email</string>
    <string name="create">Create</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sale">sale</string>
    <string name="special_name">special name</string>
    <string name="tender">tender</string>
    <string name="update">UPDATE</string>
    <string name="actualizar_puesto_de_venta">ACTUALIZAR PUESTO DE VENTA</string>
    <string name="ver_lista_de_pedidos">VER LISTA DE PEDIDOS</string>
    <string name="actualizar_producto">actualizar producto</string>
    <string name="buy">BUY</string>
    <string name="unit">unit</string>
</resources>