<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/menu_btn_crear_puesto_venta"
        android:layout_width="@dimen/menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/crear_puesto_de_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_btn_actualizar_puesto"
        android:layout_width="@dimen/menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/actualizar_puesto_de_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_btn_crear_puesto_venta" />

    <Button
        android:id="@+id/menu_btn_adicionar_unidad_venta"
        android:layout_width="@dimen/menu_btn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:text="@string/adicionar_unidad_de_venta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menu_btn_actualizar_product"
        android:layout_width="@dimen/menu_btn"
        android:layout_height="wrap_content"
        android:text="actualizar producto"
        app:layout_constraintBottom_toTopOf="@+id/menu_btn_adicionar_unidad_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_btn_actualizar_puesto"
        app:layout_constraintVertical_bias="0.49" />

</androidx.constraintlayout.widget.ConstraintLayout>